LIN-3144/LIN-3490 :: Use type of accessor for null model object
Change-Id: I38d014d93b2ad7d829148efbb1fc8e31e70c9d14